# VICAST

./: .gitignore  CLAUDE.md  Dockerfile  ENVIRONMENT_README.md  LICENSE  PORTABILITY_FIXES.md  README.md  ROADMAP.md  SESSION_NOTES.md  SESSION_NOTES_2025-10-24_pathway3_testing.md  TESTING_VICAST_ENV.md  create_vicast_env.slurm  environment.yml  environment_minimal.yml  environment_vadr.yml  environment_vicast_analyze.yml  environment_vicast_annotate.yml  environment_viral_genomics.yml  paper.bib  paper.md  pyproject.toml  test_vicast_env.sh  vicast_config.template.sh  vicast_paths.env
benchmarks/: README.md
docs/: DEPENDENCIES.md  ENVIRONMENT_SETUP.md  README.md  SESSION_NOTES.md  TESTING_GUIDE.md  TESTING_PLAN.md
examples/: README.md  run_example.sh
prebuilt_databases/: AY532665.1.tar.gz.md5  GQ433359.1.tar.gz.md5  HM440560.1.tar.gz.md5  HM440561.1.tar.gz.md5  HM440562.1.tar.gz.md5  J02363.1.tar.gz.md5  KU955591.1.tar.gz.md5  NC_001474.2.md5  NC_001474.2.tar.gz.md5  NC_001477.1.tar.gz.md5  NC_001563.2.tar.gz.md5  NC_001803.1.md5  NC_002549.1.md5  NC_004162.2.md5  NC_009942.1.tar.gz.md5  NC_027998.1.tar.gz.md5  NC_038433.1.tar.gz.md5  NC_045512.2.tar.gz.md5  NC_075022.1.tar.gz.md5  ON109597.1.tar.gz.md5  ON123646.1.tar.gz.md5  OP713603.1.tar.gz.md5  OR882082.1.tar.gz.md5  OZ409268.1.md5  PP889333.1.tar.gz.md5  README.md  collect_databases_from_htcf.sh  influenza_pr8.tar.gz.md5  manage_prebuilt_databases.py  manifest.json  package_database.sh  rotavirus_a.md5  rvfv.md5
setup/: create_vadr_env.slurm  install_java21_conda.sh  install_vadr.sh  setup_snpeff_custom_paths.sh  snpeff_env.sh
tests/: __init__.py  test_analyze.py  test_annotate.py  test_config.py  test_conservation.py  test_validation.py
tools/: setup_snpeff.sh
vicast-analyze/: IMPLEMENTATION_SUMMARY.md  PIPELINE_STATUS_2025-11-18.md  README_READ_COOCCURRENCE.md  READ_COOCCURRENCE_GUIDE.md  SESSION_NOTES_2025-11-19.md  SETUP_INSTRUCTIONS.md  VISUAL_GUIDE_DELETIONS.md  WORKFLOW_ARCHITECTURE.md  add_conservation_scores.py  add_genome_to_config.py  auto_add_virus_to_json.py  build_contamination_db.sh  check_read_cooccurrence.py  convert_html_to_png.sh  download_sra_data.sh  example_cooccurrence_usage.sh  extend_blast_db.sh  extract_gene_coords_from_snpeff.py  generate_consensus_from_vcf.py  generate_consensus_genome.py  generate_filtered_consensus.py  generate_realistic_haplotype_consensus.py  generate_variant_genomes.py  install_prebuilt_database.sh  known_viruses.json  parse_blast_results.py  parse_snpeff_tsv.py  pipeline_config.sh  pipeline_config.template.sh  process_segmented_virus.sh  qc_with_simple_plots.py  run_pipeline_htcf_consolidated.sh  run_pipeline_htcf_enhanced.sh  run_vicast_analyze_annotate_only.sh  run_vicast_analyze_full.sh  setup_blast_db.sh  (+14 more)
(+78 files in other folders)
